# pyportal-titano

./: .gitignore  README.md  boot.py  main.py  pyproject.toml  settings.sample.toml
app/: board.py  logging.py  util.py  wifi.py
