[project]
name = "pyportal-titano"
version = "1.0.0"
description = "Playing with Adafruit hardware."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.pyright]
include = ["app"]

[tool.setuptools]
packages = ["app"]
